<resources>
    <string name="app_name">LayoutButtons</string>
    <string name="inicioSesion">Inicio Sesion</string>
    <string name="entrar">Entrar</string>
    <string name="recordarCuenta">Recordar Cuenta</string>
    <string name="ingreseCuenta">Ingrese la cuenta</string>
    <string name="ingreseClave">Ingrese la clave</string>
    <string name="boton2">Boton 2</string>
    <string name="boton3">Boton 3</string>
    <string name="boton4">Boton 4</string>
    <string name="boton5">Boton 5</string>
</resources>
