<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ayan.layoutbuttons.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/inicioSesion"
        android:layout_gravity="center"
        android:id="@+id/inicioSesion"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/cuentaEditText"
        android:layout_weight="1"
        android:hint="@string/ingreseCuenta"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/claveEditText"
        android:layout_weight="1"
        android:hint="@string/ingreseClave"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/entrar"
            android:id="@+id/entrarButton" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/boton2"
            android:id="@+id/boton2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/boton3"
            android:id="@+id/boton3"
            android:onClick="onClick"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/boton4"
            android:id="@+id/boton4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/boton5"
            android:id="@+id/boton5"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/recordarCuenta"
        android:layout_gravity="right"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>
